# bahnhofs-abfahrten-client

./: README.md  pyproject.toml
bahnhofs_abfahrten_client/: __init__.py
bahnhofs_abfahrten_client/api/hafas/: arrival_station_board_v_2.py  auslastung_v_2.py  departure_station_board_v_2.py  details_redirect.py  details_v_2.py  geo_station_v_1.py  journey_details_v_2.py  position_for_train_v_1.py  search_on_trip_v_2.py  stop_place_search_v_1.py  trip_search_v_3.py
bahnhofs_abfahrten_client/api/hafas_experimental/: him_messages.py  him_search.py  journey_course.py  journey_graph.py  journey_tree.py
bahnhofs_abfahrten_client/api/hafas_subscribe/: subscribe_create.py  subscribe_create_user.py  subscribe_delete.py  subscribe_delete_user.py  (+2 more)
bahnhofs_abfahrten_client/models/: __init__.py  allowed_hafas_profile.py  allowed_sot_mode.py  auslastungs_value.py  available_br.py  available_identifier_only.py  coach_sequence.py  coach_sequence_baureihe.py  coach_sequence_coach.py  coach_sequence_coach_class.py  coach_sequence_coach_features.py  coach_sequence_coach_seats.py  coach_sequence_group.py  coach_sequence_position.py  coach_sequence_product.py  coach_sequence_sector.py  common_arrival.py  common_departure.py  common_product_info.py  common_stop.py  common_stop_info.py  coordinate_2d.py  crd.py  fahrzeug_kategorie.py  freq.py  geo_rect.py  geo_ring.py  gis.py  grouped_stop_place.py  hafas_coordinates.py  hafas_direction.py  him_filter.py  him_filter_mode.py  him_filter_type.py  him_search_request_options.py  in_out_mode.py  iris_message.py  jny.py  jny_cl.py  jny_l.py  (+102 more)
(+12 files in other folders)
